remove spacing between cards and fix clip path
fix #100

--- a/css/cards.css
+++ b/css/cards.css
@@ -10,10 +10,9 @@
   flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 6px;
   padding: 0 12px;
   width: 235px;
-  height: 29px;
+  height: 28px;
   box-sizing: border-box;
   transition: transform 400ms cubic-bezier(0.4, 0.0, 0.2, 1);
 }
